ingress/public/jrockus_vhosts.yaml
resources:
    - "@type": type.googleapis.com/envoy.config.route.v3.VirtualHost
      name: "jrockus_vhosts"
      virtual_hosts:
          - name: www.jrock.us
            domains: ["www.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  redirect:
                      host_redirect: "jrock.us"
                      response_code: MOVED_PERMANENTLY
          - name: jrock.us
            domains: ["jrock.us"]
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: www:www-jrock-us:h2
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
            rate_limits:
                - actions:
                      - generic_key:
                            descriptor_value: www
                      - remote_address: {}
            retry_policy:
                num_retries: 3
                retry_on: "5xx,reset"
                retry_host_predicate:
                    - name: "envoy.retry_host_predicates.previous_hosts"
                host_selection_retry_max_attempts: 3
          - name: mail.jrock.us
            domains: ["mail.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  response_headers_to_add:
                      - header:
                            key: location
                            value: "https://mail.google.com/a/jrock.us"
                        append: false
                      - header:
                            key: content-type
                            value: "text/html; charset=UTF-8"
                        append: false
                  direct_response:
                      status: 301
                      body:
                          inline_string: |
                              <HTML><HEAD><meta http-equiv="content-type" content="text/html;charset=utf-8">
                              <TITLE>301 Moved</TITLE></HEAD><BODY>
                              <H1>301 Moved</H1>
                              The document has moved
                              <A HREF="https://mail.google.com/a/jrock.us">here</A>.
                              </BODY></HTML>
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
          - name: calendar.jrock.us
            domains: ["calendar.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  response_headers_to_add:
                      - header:
                            key: location
                            value: "https://www.google.com/calendar/hosted/jrock.us"
                        append: false
                      - header:
                            key: content-type
                            value: "text/html; charset=UTF-8"
                        append: false
                  direct_response:
                      status: 302
                      body:
                          inline_string: |
                              <HTML><HEAD><meta http-equiv="content-type" content="text/html;charset=utf-8">
                              <TITLE>302 Moved</TITLE></HEAD><BODY>
                              <H1>302 Moved</H1>
                              The document has moved
                              <A HREF="https://www.google.com/calendar/hosted/jrock.us">here</A>.
                              </BODY></HTML>
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
          - name: ci.jrock.us
            domains: ["ci.jrock.us"]
            rate_limits:
                - actions:
                      - generic_key:
                            descriptor_value: ci
                      - remote_address: {}
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: concourse:concourse-web:atc
                      timeout: 3600s
                      idle_timeout: 3600s
                      upgrade_configs:
                          - upgrade_type: websocket
                            enabled: true
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
          - name: jaeger.jrock.us
            domains: ["jaeger.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: observability:jaeger-query:http-query
          - name: prom.jrock.us
            domains: ["prom.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: monitoring:prometheus-operated:web
          - name: alertmanager.jrock.us
            domains: ["alertmanager.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: monitoring:alertmanager-operated:web
          - name: alertmanager-status.jrock.us
            domains: ["alertmanager-status.jrock.us"]
            rate_limits:
                - actions:
                      - generic_key:
                            descriptor_value: alertmanager-status
                      - remote_address: {}
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: monitoring:alertmanager-status:public
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
          - name: grafana.jrock.us
            domains: ["grafana.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: monitoring:grafana:https
                      timeout: 3600s
                      idle_timeout: 3600s
                      upgrade_configs:
                          - upgrade_type: websocket
                            enabled: true
          - name: loki.jrock.us
            domains: ["loki.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: loki:loki-headless:http-metrics
                      timeout: 3600s
                      idle_timeout: 3600s
                      upgrade_configs:
                          - upgrade_type: websocket
                            enabled: true
          - name: pgadmin.jrock.us
            domains: ["pgadmin.jrock.us"]
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: postgres:pgadmin:http
          - name: argocd.jrock.us
            domains: ["argocd.jrock.us", "argocd.jrock.us:443"]
            rate_limits:
                - actions:
                      - generic_key:
                            descriptor_value: argocd
                      - remote_address: {}
            routes:
                - match:
                      prefix: "/"
                      grpc: {}
                  route:
                      cluster: argocd:argocd-server:grpc
                      timeout: 3600s
                      idle_timeout: 3600s
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
                - match: { prefix: "/api/dex" }
                  route:
                      cluster: argocd:argocd-server:http
                      timeout: 3600s
                      idle_timeout: 3600s
                - match: { prefix: "/" }
                  route:
                      cluster: argocd:argocd-server:http
                      timeout: 3600s
                      idle_timeout: 3600s
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
          - name: sso.jrock.us
            domains: ["sso.jrock.us", "sso.jrock.us:443"]
            rate_limits:
                - actions:
                      - generic_key:
                            descriptor_value: sso
                      - remote_address: {}
            routes:
                - match: { prefix: "/" }
                  route:
                      cluster: jsso2:jsso2:h2
                  typed_per_filter_config:
                      envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          disabled: true
          - name: self-check
            domains: ["self-check"]
            routes:
                - match: { prefix: "/" }
                  direct_response:
                      status: 200
                      body:
                          inline_string: "success"
          - name: fallback
            domains: ["*"]
            routes:
                - match: { prefix: "/" }
                  direct_response:
                      status: 404
                      body:
                          inline_string: "Not found!\n"
