ingress/public/service-new.yaml
apiVersion: v1
kind: Service
metadata:
    name: public-new
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-protocol: "tcp"
        service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 80
          targetPort: http
        - name: https
          port: 443
          targetPort: https
        - name: h3
          port: 443
          targetPort: h3
          protocol: UDP
