ingress/public/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: public
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-protocol: "tcp"
        service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
spec:
    type: LoadBalancer
    loadBalancerIP: 206.189.254.193
    ports:
        - name: http
          port: 80
          targetPort: http
        - name: https
          port: 443
          targetPort: https
        - name: h3
          port: 443
          targetPort: h3
          protocol: UDP
