ingress/public/udp-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: public-udp
    annotations:
        service.beta.kubernetes.io/do-loadbalancer-protocol: "udp"
        service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "false"
spec:
    type: LoadBalancer
    ports:
        - name: h3
          port: 31313
          targetPort: h3
          protocol: UDP
